# scribe

./: .gitignore  CLAUDE.md  justfile  package-lock.json  package.json
docs/: alternative-asr-models.md  android-cross-compile.md  architecture.md  audio-latency.md  fine-tuning-grammar-models.md  fluency-correction.md  grammar-correction-roadmap.md  hotwords.md  mid-sentence-caps-fix.md  model-delivery.md  model-research.md  post-processing-pipeline.md  remote-data-files.md  sherpa-onnx-vad-internals.md  speaker-diarization.md  testing-strategy.md  todo.md  user-vocab.md  whisper-models.md
scripts/: android-build.sh  download_t5_grammar_onnx.py  download_test_model.sh  export_cola_onnx.py  export_gec_t5_onnx.py  requirements-grammar.txt  test_cola_router.py  test_correctors_v2.py  test_correctors_v3.py  test_fluency_correction.py  test_full_pipeline.py  test_pipeline.py  test_pipeline_v2.py  test_pipeline_v3.py  test_router_threshold_sweep.py  test_routers_v2.py
scripts/data/: CLAUDE.md  corrector_test_cases.json  pipeline_test_cases.json  router_test_cases.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  abort_guard.c  build.rs  stubs.c  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/data/grammar/: config.0.0.1.json  tokenizer_config.json
src-tauri/icons/: icon.icns
src-tauri/src/: android_ime.rs  audio.rs  config.rs  coordinator.rs  debug_log.rs  delivery.rs  dictation.rs  engine.rs  history.rs  lib.rs  main.rs  media.rs  models.rs  paste.rs  recorder.rs  snippets.rs  sound.rs  speaker.rs  transcribe.rs  vad.rs
src-tauri/src/postprocess/: filler.rs  grammar.rs  grammar_neural.rs  harper.rs  itn.rs  mod.rs  spelling.rs  vocab.rs
src-tauri/tests/: speaker_verify.rs  tract_parakeet.rs  vad_tuning.rs
