[package]
name = "scribe-rs"
version = "0.1.0"
description = "Voice dictation app"
authors = ["Alex"]
edition = "2021"

[lib]
name = "scribe_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
dirs = "6"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["fs", "io-util"] }
futures-util = "0.3"
cpal = "0.15"
sherpa-onnx = "1.12"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3"
enigo = "0.3"
tauri-plugin-global-shortcut = "2"

[dev-dependencies]
tract-onnx = "0.21"
rustfft = "6"
hound = "3.5"
tempfile = "3"

[patch.crates-io]
tract-onnx = { path = "../../tract/onnx" }
tract-hir = { path = "../../tract/hir" }
tract-core = { path = "../../tract/core" }
tract-data = { path = "../../tract/data" }
tract-linalg = { path = "../../tract/linalg" }
tract-nnef = { path = "../../tract/nnef" }
tract-onnx-opl = { path = "../../tract/onnx-opl" }
